# flexigurator

./: .gitignore  README.md  formtest.py  pyproject.toml  tasks.py
.github/workflows/: branch-pipeline.yml  release.yml
flexigurator/: __init__.py  config_patch.py  config_versions.py  placeholder.py
flexigurator/form/: __init__.py  form.py
flexigurator/form/jinja_templates/: config_form.html  index.html
tests/: test_config_patcher.py  test_config_versions.py  test_placeholder.py
tests/form/: test_form.py
