[tool.poetry]
name = "flexigurator"
version = "0.3.2"
description = "Python Configuration solution."
authors = ["Thomas Bos <thymer.bos217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.8"
urllib3 = "<=2.0"
fastapi = "^0.95.2"
jinja2 = "^3.1.2"
mmh3 = "^4.0.0"
pyyaml = "^6.0"
invoke = "^2.1.2"
confz = "^1.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
xenon = "^0.9.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
darglint = "^1.8.1"
types-pyyaml = "^6.0.12.10"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = false

[tool.coverage.report]
fail_under = 100


[tool.mypy]
python_version = 3.11
disallow_untyped_defs = false
ignore_missing_imports = false


[tool.radon]
exclude = "test_*.py"
cc_min = "B"
no_assert = true


[tool.pydocstyle]
# PEP257 convention ignores and ignores for codes that enforce docstrings
ignore = "D1,D202,D203,D212,D213"
